# papers-digest-ai

./: .gitignore  README.md  config.example.json  pyproject.toml
docs/: architecture.md  metrics.md  miniapp-setup.md  roles.md
src/papers_digest/: __init__.py  __main__.py  agents.py  bot.py  cli.py  formatter.py  llm.py  metrics.py  models.py  pipeline.py  ranker.py  ranking.py  settings.py  summarizer.py  webapp.py
src/papers_digest/sources/: __init__.py  arxiv.py  base.py  crossref.py  openalex.py  semantic_scholar.py
tests/: test_metrics.py  test_pipeline.py  test_ranker.py  test_ranking.py  test_settings.py  test_sources.py
