[project]
name = "papers-digest-ai"
version = "0.1.0"
description = "AI agent that finds today's papers, ranks them by query, and generates a digest."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["papers", "digest", "arxiv", "semantic-scholar", "ai-agent"]

dependencies = [
  "requests>=2.32.0",
  "feedparser>=6.0.11",
  "python-dateutil>=2.9.0",
  "pydantic>=2.7.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
llm = ["openai>=1.40.0"]
test = ["pytest>=8.2.0", "responses>=0.25.0"]

[project.scripts]
papers-digest = "papers_digest.cli:app"

[tool.pytest.ini_options]
addopts = "-q"

testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
