[project]
name = "papers-digest-ai"
version = "0.1.0"
description = "Daily AI agent that finds, ranks, and posts today's papers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "python-dateutil>=2.9.0",
  "feedparser>=6.0.11",
  "python-telegram-bot>=21.0",
  "apscheduler>=3.10.0",
  "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
papers-digest = "papers_digest.cli:main"
papers-digest-bot = "papers_digest.bot:main"
papers-digest-web = "papers_digest.webapp:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

